Fehler in POM aufgehoben